--- a/src/components/salaries/salary-detail-widget/salary-detail-widget.component.scss
+++ b/src/components/salaries/salary-detail-widget/salary-detail-widget.component.scss
@@ -6,15 +6,15 @@
 
 :host-context([theme='dark']) {
   h6 {
-    color: $gray-100;
+    color: $gray-color-100;
   }
   table {
     [title] {
-      color: $gray-600
+      color: $gray-color-600
     }
     tbody {
       [value] {
-        color: $gray-100;
+        color: $gray-color-100;
       }
     }
   }
